--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,6 @@ node_modules/
 
 
 # ============ BACK (Symfony) ==============
-/back/var/
-/back/vendor/
-/back/.env.local
-/back/.env.*.local
-/back/public/bundles/
+
+front/build/back/vendor/
+front/build/back/var/cache/
